# Agenthedge

./: .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: quality-gate.yml  staged-release-gates.yml
agents/: compliance.md  data.md  director.md  execution.md  quant.md  risk.md
config/promotion-gates/: catalyst_fixture_experiment.json  catalyst_fixture_failure.json  paper_rollout.json
docs/: AGENTS.md  AUDIT_TRAIL.md  CHANGELOG.md  COMPLIANCE.md  CONSTITUTION.md  DATA_GOVERNANCE.md  GLOSSARY.md  GOVERNANCE.md  OBSERVABILITY.md  OPS_RUNBOOK.md  PLUGIN_WORKFLOW_INTEGRATION.md  READINESS_CHECKLIST.md  RISK_MANAGEMENT.md  ROADMAP.md  SECURITY.md  SUBAGENT_OPERATING_MODEL.md  SUBAGENT_TASK_TEMPLATES.md  TESTING.md  execspec.md
ops/observability/: docker-compose.yml  prometheus.yml
scripts/: backtest_strategy.py  canary_postgres_runtime.py  cutover_audit_chain.py  failover_drill.py  migrate_audit_chain.py  migrate_runtime_state_to_postgres.py  migration_rollback_simulation.py  mock_run_once.py  package_smoke.py  reconcile_postgres_state.py  review_quarantine.py  run_black_check.py  run_catalyst_public_equity_question_gatecheck.py  verify_audit_chain.py
src/: README.md  __init__.py
src/agents/: __init__.py  base.py  config.py  context.py  messaging.py  postgres_bus.py  registry.py  runtime.py  runtime_builder.py
src/audit/: __init__.py  postgres_sink.py  sink.py
src/backtest/: __init__.py  engine.py
src/cli/: __init__.py  backtest.py  broker_canary.py  paper_broker_health.py  paper_broker_health_history.py  paper_decision_log.py  paper_live_enablement_execution_plan.py  paper_live_enablement_final_review.py  paper_live_enablement_request.py  paper_live_enablement_switch.py  paper_live_readiness_gate_dossier.py  paper_live_readiness_gate_review.py  paper_live_readiness_report.py  paper_live_readiness_workbench.py  paper_operator_status.py  paper_review_board.py  paper_rollout_evidence.py  paper_rollout_gate.py  (+16 more)
tests/: README.md  __init__.py
(+135 files in other folders)
